--- a/node-page/index.html
+++ b/node-page/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gold Pan Kit</title>
   </head>
-  <body>
+  <body class="theme-light">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
