--- a/node-page/index.html
+++ b/node-page/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gold Pan Kit</title>
+    <script src="/lib/mermaid/mermaid.min.js"></script>
   </head>
   <body class="theme-light">
     <div id="app"></div>
